# raw-to-daily-splitter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/splitter/: logger.py  main.py  splitter.py
tests/: test_splitter.py
