[tool.poetry]
name = "raw-to-daily-splitter"
version = "0.1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pandas = "^2.2.3"
python = ">=3.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.1.2,<3.0.0"]
build-backend = "poetry.core.masonry.api"
