[tool.poetry]
name = "raw-to-daily-splitter"
version = "0.1.0"
readme = "README.md"
packages = [
  { include = "splitter", from = "src" }
]
package-mode = true

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true

[tool.poetry.dependencies]
pandas = "^2.2.3"
python = ">=3.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.1.2,<3.0.0"]
build-backend = "poetry.core.masonry.api"
